objects/GSS_Account_Team_Recon_Records__c.object
<CustomObject>
    <fields>
        <fullName>Account_Team_Id__c</fullName>
        <label>Account Team Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Name__c</fullName>
        <label>Account Team Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GSS Account Team Recon Records</relationshipLabel>
        <relationshipName>GSS_Account_Team_Recon_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSS_Account_Team_Recon_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GSS Account Team Recon Records</label>
    <nameField>
        <label>GSS Account Team Recon Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSS Account Team Recon Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>